fix nav display on mobile

--- a/src/app/containers/Branding/Branding.scss
+++ b/src/app/containers/Branding/Branding.scss
@@ -1,9 +1,24 @@
 @import "~styles/variables";
+@import "~styles/mixins/screens";
 
 .branding {
   min-height: $branding-height;
   background: $dark;
   font-weight: bold;
+
+  @include phone {
+    .nav-label {
+      display: none;
+    }
+
+    .nav-item {
+      margin-left: 15px;
+    }
+
+    .dropdown-recent-reading {
+      display: none;
+    }
+  }
 }
 
 .dropdown-menu {
